# breakout_gazebo

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/breakout_gazebo/: breakoutGazeboPlugin.h
launch/: breakout.launch  tetris.launch
models/bouncy_ball/: model.config  model.sdf
models/boundary/: model.config  model.sdf
models/paddle/: model.config  model.sdf
models/straight_tetromino/: model.config  model.sdf
scripts/: paddle_play.py
src/: breakoutGazeboPlugin.cpp
worlds/: breakout.world  tetris.world
